Fixed bugs, Added compilation to jar with dependencies